--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
       <!-- intestazione -->
       <header>
 
+        <div class="img-intestazione">
+          <img src="img/logo.svg" alt="logo" height="100px" width="100px">
+          <h1>ANOTHER BEAUTIFUL ORGANIC THEME</h1>
+        </div>
+
+
+        <nav>
+
+        </nav>
+
       </header>
 
       <!-- fine intestazione -->
@@ -36,6 +46,10 @@
 
         <section>
 
+          <div class="articolo">
+
+          </div>
+
         </section>
 
         <!-- fine centrale -->
@@ -43,6 +57,10 @@
         <!-- lato destro -->
 
         <aside>
+
+          <div>
+
+          </div>
 
           <div>
 
